--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
         "@langchain/core": "^1.1.4",
         "@langchain/ollama": "^1.0.3",
         "cors": "^2.8.5",
+        "diff": "^8.0.2",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "langchain": "^0.1.37",
