--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "diff": "^8.0.2",
     "latex.js": "^0.12.6",
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
