going to smartEditor

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "electron:build": "tsc && vite build && tsc -p tsconfig.electron.json && electron-builder"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "diff": "^8.0.2",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
